implemented enhanced image across stages 3 4, implemented nodejs for email sending (working)

--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,25 @@
 {
-  "dependencies": {
-    "nodejs": "^0.0.0",
-    "nodemon": "^3.1.11"
-  },
   "name": "server",
   "version": "1.0.0",
   "description": "",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js",
+    "tunnel": "ngrok http 4000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {}
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
+    "nodemon": "^3.1.11",
+    "pg": "^8.16.3"
+  }
 }
