Refactor user email handling and migrate to MongoDB
- Updated user.controller.js to use Mongoose for database operations instead of PostgreSQL.
- Removed database.js file and replaced it with a MongoDB connection setup in db.js.
- Added contact.controller.js and contact.routes.js for handling contact form submissions.
- Created Contact and WaitListEmail models using Mongoose.
- Updated mail service to use environment variables for email credentials.
- Adjusted server.js to include new contact routes and connect to MongoDB.
- Changed the ngrok tunnel port in package.json for local development.

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "tunnel": "ngrok http 6000"
+    "tunnel": "ngrok http 4000"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,6 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.11",
-    "pg": "^8.16.3"
+    "mongoose": "^8.19.2"
   }
 }
